// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewing 0 expenses 1`] = `
<Fragment>
  <h2>
    Add expense
  </h2>
</Fragment>
`;

exports[`Viewing 1 expenses to talling $94.34 1`] = `
<Fragment>
  <div>
    <h2>
      Summary
    </h2>
    <p>
      <strong>
         
        expense
         available: 
      </strong>
      1
    </p>
    <p>
      <strong>
         
        expense
         Total: 
      </strong>
      $94.34
    </p>
  </div>
</Fragment>
`;

exports[`Viewing 2 expenses to talling $94.34 1`] = `
<Fragment>
  <div>
    <h2>
      Summary
    </h2>
    <p>
      <strong>
         
        expenses
         available: 
      </strong>
      2
    </p>
    <p>
      <strong>
         
        expenses
         Total: 
      </strong>
      $94.34
    </p>
  </div>
</Fragment>
`;
